# live-bootcamp-project

./: README.md  compose.yml  docker.bat
.github/workflows/: prod.yml
auth-service/: Cargo.toml
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_store.rs  email.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: hello.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_token.rs
auth-service/src/services/: banned_token_store.rs  hashmap_user_store.rs  mod.rs
auth-service/src/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/utils/: auth.rs
